# nao-car

./: .gitignore  README.md
Misc/Graphic Resources/: nao-car.psd
Misc/Graphic Resources/GUI/: nao-car-gui.psd
Misc/NaoCar/: NaoCar.tex
Misc/WebGui/: index.html
Misc/countdown/js/: Three.js  box2d.js  countdown.js  dots.js  entities.js
NaoCar/: CMakeLists.txt  NaoCar.aux  NaoCar.tex  NaoCar.toc  nao.js  qiproject.xml
NaoCar/Apps/AutoDrive/: main.cpp
NaoCar/Apps/AutoDriveLocal/: main.cpp
NaoCar/Apps/CreateAnimation/: main.cpp
NaoCar/Apps/Remote/: main.cpp
NaoCar/Apps/Remote/Resources/: Ui.qrc
NaoCar/Apps/Remote/Resources/qt/etc/: qt.conf
NaoCar/Apps/Remote/Sources/: Bonjour.cpp  BonjourDelegate.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowDelegate.hpp  Remote.cpp  Remote.hpp  StreamDisplay.cpp  StreamDisplay.hpp  main.cpp
NaoCar/Apps/Remote/Ui/: MainWindow.ui
NaoCar/Apps/RemoteControl/: sfWindow.cpp  sfWindow.hpp
NaoCar/Apps/SetStiffnesses/: main.cpp
NaoCar/CMakeModules/: FindOculusSDK.cmake
NaoCar/Modules/AutoDrive/: AutoDrive.cpp  AutoDrive.hpp
NaoCar/Modules/Drive/: Drive.cpp  Drive.hpp  VoiceSpeaker.cpp  VoiceSpeaker.hpp
NaoCar/Modules/Drive/Poses/: begin-no-hand.anim  downshift.anim  give-carembar.anim  push-gas-pedal.anim  release-gas-pedal.anim  release-steering-wheel.anim  stop-no-hand.anim  take-steering-wheel.anim  upshift.anim
NaoCar/Modules/Drive/Poses/arm/: arm-up1.pose  arm-up2.pose
NaoCar/Modules/Drive/Poses/carembar/: carembar-1.pose  carembar-2.pose  carembar-3.pose  carembar-4.pose  carembar-5.pose  carembar-6.pose  carembar-7.pose
NaoCar/Modules/Drive/Poses/downshift/: downshift-1.pose  downshift-2.pose
NaoCar/Modules/Drive/Poses/gas-pedal/: gas-pedal-pushed.pose  gas-pedal-released.pose
NaoCar/Modules/Drive/Poses/steering-wheel/: steering-wheel-front.pose  steering-wheel-left.pose  steering-wheel-right.pose  steering-wheel-take1.pose  steering-wheel-take2.pose
NaoCar/Modules/Drive/Poses/upshift/: upshift-1.pose  upshift-2.pose
NaoCar/Modules/Pose/: Animation.cpp  Animation.hpp  PoseManager.cpp  PoseManager.hpp
NaoCar/Modules/RemoteServer/: AutoDriving.cpp  AutoDriving.hpp  Bonjour.cpp  Bonjour.hpp  BonjourDelegate.hpp  RemoteServer.cpp  RemoteServer.hpp  StreamServer.cpp  StreamServer.hpp  VoiceSpeaker.cpp  VoiceSpeaker.hpp
NaoCar/Modules/RemoteServer/Network/: ASocket.cpp  ASocket.h  ATcpServer.cpp  ATcpServer.h  ATcpSocket.cpp  ATcpSocket.h  BoostTcpServer.cpp  BoostTcpServer.h  BoostTcpSocket.cpp  BoostTcpSocket.h  ITcpServerDelegate.h  ITcpSocketDelegate.h  Types.h
NaoCar/Modules/RemoteServer/Resources/: floor.depth
NaoCar/Oculus Rift/: CMakeLists.txt  README.md
NaoCar/Oculus Rift/Resources/: Frontward.xml  Left.xml  Right.xml
NaoCar/Oculus Rift/Sources/: MainWindow.cpp  MainWindow.hpp  Remote.cpp  Remote.hpp  RiftDelegate.hpp  StreamDisplay.hpp
NaoCar/Proxies/AutoDrive/: AutoDriveProxy.cpp  AutoDriveProxy.hpp
NaoCar/Proxies/Drive/: CMakeLists.txt  DriveProxy.cpp  DriveProxy.hpp
NaoCar/VRemote/: CMakeLists.txt
NaoCar/VRemote/Resources/: Backward.xml  Front.xml  Frontward.xml  Left.xml  Right.xml  Stopped.xml  Ui.qrc
NaoCar/VRemote/Sources/: Bonjour.cpp  Bonjour.hpp  BonjourDelegate.hpp  HandDescription.cpp  HandDescription.hpp  LeapListener.cpp  LeapListener.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowDelegate.hpp  PositionConfiguration.cpp  PositionConfiguration.hpp  Remote.cpp  Remote.hpp  Rift.cpp  Rift.hpp  StreamDisplay.cpp  VRView.cpp  VRView.hpp  main.cpp
NaoCar/VRemote/Ui/: MainWindow.ui
NaoCar/iOS/NaoCar Remote/: ActionsViewController.h  ActionsViewController.m
NaoCar/iOS/NaoCar Remote/NaoCar Remote/: AppDelegate.h  AppDelegate.m  JoystickViewController.h  JoystickViewController.m  JoystickViewController.xib  NaoCar Remote-Info.plist  NaoCar Remote-Prefix.pch  ViewController.h  ViewController.m  main.m
NaoCar/iOS/NaoCar Remote/NaoCar Remote.xcodeproj/: project.pbxproj
NaoCar/iOS/NaoCar Remote/NaoCar Remote.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NaoCar/iOS/NaoCar Remote/NaoCar Remote.xcodeproj/project.xcworkspace/xcuserdata/Gael.xcuserdatad/: UserInterfaceState.xcuserstate
NaoCar/iOS/NaoCar Remote/NaoCar Remote.xcodeproj/xcuserdata/Gael.xcuserdatad/xcschemes/: NaoCar Remote.xcscheme  xcschememanagement.plist
NaoCar/iOS/NaoCar Remote/NaoCar Remote/en.lproj/: MainStoryboard_iPad.storyboard
countdown/: countdown.html
countdown/css/: style.css
countdown/js/: base.js  colors.js  pre-dots.js  sequencer.js
drive/: Kart.cpp  Kart.hh  main.cpp  qiproject.xml
src/: Pose.cpp
src/.qi/: qibuild.xml  worktree.xml
src/Drive/: AutoDrive.cpp  AutoDrive.hpp  AutoDriveProxy.cpp  AutoDriveProxy.hpp  CMakeLists.txt  Drive.cpp  Drive.hh  Drive.hpp  DriveProxy.cpp  DriveProxy.hpp  Window.cpp  Window.hpp  auto.cpp  getLibPose.sh  main.cpp  main_auto.cpp  qiproject.xml  qtMain.cpp  receive_stream.sh  sfWindow.cpp  sfWindow.hpp  sfmlMain.cpp
src/Drive/Poses/: downshift.anim  give-carembar.anim  push-gas-pedal.anim  release-gas-pedal.anim  release-steering-wheel.anim  take-carembar.anim  take-steering-wheel.anim  turn-front.anim  turn-left.anim  turn-right.anim  upshift.anim
src/Drive/Poses/arm/: arm-up1.pose
src/Drive/Poses/carembar/: carembar-1.pose  carembar-5.pose  carembar-6.pose
src/Drive/Poses/downshift/: downshift-1.pose  downshift-2.pose
src/Drive/Poses/gas-pedal/: gas-pedal-pushed.pose  gas-pedal-released.pose
src/Drive/Poses/steering-wheel/: steering-wheel-front.pose  steering-wheel-left.pose  steering-wheel-right.pose  steering-wheel-take1.pose  steering-wheel-take2.pose
src/Drive/Poses/upshift/: upshift-1.pose  upshift-2.pose
src/Drive/include/: Pose.hpp  PoseManager.hpp
src/Drive/lib/: libsfml-audio.so.2.0  libsfml-graphics.so.2  libsfml-network.so.2.0  libsfml-system.so.2  libsfml-window.so.2
src/Pose/: Animation.cpp  Animation.hpp  CMakeLists.txt  Pose.cpp  Pose.hpp  PoseManager.cpp  PoseManager.hpp  launchAnimation.cpp  qiproject.xml  save_pose.cpp  sleeping.pose  take_pose.cpp  test.cpp
src/drive/: CMakeLists.txt
